--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand p-0" href="/">
+        <a class="navbar-brand p-0" href="index.html">
           <img src="image/logo.png" alt="Logo" width="50" />
         </a>
         <button
